--- a/ui/style.css
+++ b/ui/style.css
@@ -19,7 +19,7 @@ body {
 .img-medium {
     height: 200px;
 }
-/*.container {
+.container {
     max-width: 800px;
     margin: 0 auto;
     color: #6b5f5f;
@@ -27,4 +27,4 @@ body {
     padding: 60px;
     padding-left: 20px;
     padding-right: 20px;
-}*/
+}
